--- a/Spike-Speigel-GifT/index.html
+++ b/Spike-Speigel-GifT/index.html
@@ -9,8 +9,17 @@
         <div id="header">
             <h1>Soon it will be Spike's birthday 🎉</h1>
             <img id="bff-img" src="images/spike.jpg">
+
             <h2 id="bday-age">-19 years old</h2>
             <h4 id="bday-date">06.26.2044</h4>
+        </div>
+
+        <div id="bg-music">
+            <br>
+            <p>Play this for some ambience! :D </p>
+            <audio controls loop>
+                <source src="media/cats-on-mars.mp3" type="audio/mp3">
+            </audio>
         </div>
         
         <div class="gift-section">
